# m4bmaker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  installer.iss  m4bmaker-windows.spec  m4bmaker.spec  make_m4b.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: build.yml
docs/: architecture.md  audiobookbinder.icns  docker.md
m4bmaker/: __init__.py  __main__.py  chapters.py  chapters_file.py  cli.py  cover.py  encoder.py  m4b_editor.py  metadata.py  models.py  pipeline.py  preflight.py  repair.py  scanner.py  utils.py
m4bmaker/gui/: __init__.py  __main__.py  app.py  job.py  player.py  prefs.py  queue_manager.py  queue_window.py  styles.py  updater.py  widgets.py  window.py  worker.py
m4bmaker/gui/resources/: audiobookbinder.icns
man/: .keep  m4bmaker.1  make_m4b.1
scripts/: build_macos.sh  entitlements.plist  sign_and_notarize.sh
tests/: conftest.py  test_chapters.py  test_chapters_file.py  test_cli.py  test_cover.py  test_encoder.py  test_integration.py  test_m4b_editor.py  test_metadata.py  test_pipeline.py  test_preflight.py  test_repair.py  test_requirements.py  test_scanner.py  test_utils.py
tests/gui/: __init__.py  conftest.py  test_app.py  test_job.py  test_player.py  test_prefs.py  test_queue_manager.py  test_queue_window.py  test_updater.py  test_widgets.py  test_window.py  test_worker.py
