[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m4bmaker"
version = "0.1.0"
description = "Convert a directory of audio files into a single .m4b audiobook with chapters, cover art, and metadata"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "mutagen>=1.47",
    "natsort>=8.4",
]

[project.scripts]
m4bmaker = "m4bmaker.__main__:main"

[project.urls]
Homepage = "https://github.com/sageframe-no-kaji/m4bmaker"
Repository = "https://github.com/sageframe-no-kaji/m4bmaker"

[tool.setuptools.packages.find]
include = ["m4bmaker*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
pythonpath = ["."]
